blog-api/blog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api-deployment
  labels:
    app: blog-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api
    spec:
      containers:
      - name: blog-api-container
        image: localhost:32000/blog-api:v1
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
