blog-api/blog-api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-lb
spec:
  selector:
    app: inventory-api
  ports:
    - port: 30002
      targetPort: 5000
  type: LoadBalancer
