blog-api/blog-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30002
    port: 8081
    targetPort: 5000
  selector:
    app: blog-api
