blog-api/blog-api-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-api
spec:
  hosts:
  - "*"
  gateways:
  - blog-api-gateway
  http:
  - match:
#    - uri:
#        exact: /productpage
#    - uri:
#        prefix: /static
#    - uri:
#        exact: /login
#    - uri:
#        exact: /logout
    - uri:
        prefix: /api/v1/users
    route:
    - destination:
        host: my-blog.com
        port:
          number: 30002
