blog-api/blog-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api-ingress
spec:
  rules:
    - host: my-blog.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-api-service
                port:
                  number: 8081
